--- a/caravan/index.html
+++ b/caravan/index.html
@@ -104,6 +104,14 @@
 					</section>
 				</div>
 			</div>
+			<div class="pagination">
+				<p class="pagination-box"><<</p>
+				<p class="pagination-box"><</p>
+				<p class="pagination-box">1</p>
+				<p class="pagination-box">2</p>
+				<p class="pagination-box">3</p>
+				<p class="pagination-box">></p>
+				<p class="pagination-box">>></p>
 		</section>
 		<div class="sideber">
 			<section class="popular">
