--- a/caravan/index.html
+++ b/caravan/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<script src="https://kit.fontawesome.com/98c29c3cb5.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="style.css">
 	<title>CARAVAN</title>
 </head>
@@ -9,6 +10,10 @@
 	<header>
 		<h1 class="headline">
 			<a href="index.html">CARAVAN</a>
+		<div class="social">
+			<i class="fab fa-facebook-square"></i>
+			<i class="fab fa-twitter-square"></i>
+			<i class="fab fa-instagram"></i>
 	</header>
 	<nav>
 		<ul class="nav-list">
