--- a/caravan/index.html
+++ b/caravan/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<script src="https://kit.fontawesome.com/98c29c3cb5.js" crossorigin="anonymous"></script>
 	<link rel="stylesheet" href="style.css">
 	<title>CARAVAN</title>
